<resources>

    <!-- App Strings -->
    <string name="AppName">Majorizer</string>
    <string name="TitleHome">Home</string>
    <string name="TitleAccount">Account</string>
    <string name="TitleNotifications">Notifications</string>
    <string name="RemoveNotification">Remove Notification</string>
    <string name="AccountObject">account</string>
    <string name="StudentObject">student</string>
    <string name="AdminActionType">AdminActionType</string>
    <string name="AdminAction">AdminAction</string>
    <string name="Course">Course</string>
    <string name="ChangeCurriculum">ChangeCurriculum</string>
    <string name="ChangeMasterCourseList">ChangeMasterCourseList</string>
    <string name="AddCourse">AddCourse</string>
    <string name="StudentType">StudentType</string>
    <string name="CourseType">CourseType</string>
    <string name="CourseLevel">CourseLevel</string>
    <string name="RemoveCourse">RemoveCourse</string>
    <string name="Prerequisites">Prerequisites</string>


    <!-- Login Activity Strings -->
    <string name="Login">LOGIN</string>
    <string name="PasswordKey">Password</string>
    <string name="ClarksonUsername">Clarkson Username</string>
    <string name="GradCap">Graduation Cap</string>
    <string name="Accounts">Accounts</string>
    <string name="Advisors">Advisors</string>


    <!-- Database Keys -->
    <string name="AccountType">Account Type</string>
    <string name="MasterCourseList">MasterCourseList</string>
    <string name="MasterCourseListURL">/MasterCourseList</string>
    <string name="Curriculum">Curriculum</string>
    <string name="Course_History">Course History</string>
    <string name="Courses_Needed">Courses Needed</string>
    <string name="Current_Courses">Current Courses</string>
    <string name="Remaining_Courses">Remaining Courses</string>
    <string name="Switch_Major">Edit Major/Minor</string>
    <string name="CurrentCourses">CurrentCourses</string>
    <string name="LoginAttempts">LoginAttempts</string>
    <string name="UserLockedOut">Your account is locked! You have exceeded the number of login attempts.</string>
    <string name="CourseName">CourseName</string>
    <string name="Course_Name">Course Name:</string>
    <string name="Credits">Credits</string>
    <string name="Type">Type</string>
    <string name="Advisor">advisor</string>
    <string name="Grad">grad</string>
    <string name="Undergrad">undergrad</string>
    <string name="Advisor1">Advisor1</string>
    <string name="Advisor2">Advisor2</string>
    <string name="CourseHistory">CourseHistory</string>
    <string name="FirstNameKey">FirstName</string>
    <string name="LastNameKey">LastName</string>
    <string name="Major1">Major1</string>
    <string name="Major2">Major2</string>
    <string name="Minor">Minor</string>
    <string name="Minor1">Minor1</string>
    <string name="Minor2">Minor2</string>
    <string name="UsernameKey">Username</string>
    <string name="NullString">NULL</string>
    <string name="Advisees">Advisees</string>
    <string name="Name">Name</string>
    <string name="Id">Id</string>
    <string name="Department">Department</string>
    <string name="UndergradMajors">UndergradMajors</string>
    <string name="Minors">Minors</string>
    <string name="GradMajors">GradMajors</string>

    <!-- Create Account Unlocking Strings -->
    <string name="NotLocked">The account which you entered was not locked.</string>
    <string name="EmptyUsername">The username field is empty. Please enter a username."</string>
    <string name="UnlockSuccess">Successfully unlocked the user\'s account!"</string>

    <!-- Create Account Page Strings -->
    <string name="CreateAccount">Create Account</string>
    <string name="CreateCourse">Create Course</string>
    <string name="ComputerScience">Computer Science</string>
    <string name="ComputerScienceCode">CS</string>
    <string name="Mathematics">Mathematics</string>
    <string name="MathematicsCode">MA</string>
    <string name="Physics">Physics</string>
    <string name="PhysicsCode">PH</string>
    <string name="FirstYear">First Year Course</string>
    <string name="FirstYearCode">FY</string>
    <string name="University">University Course</string>
    <string name="UniversityCode">UNIV</string>
    <string name="Statistics">Statistics</string>
    <string name="StatisticsCode">STAT</string>
    <string name="ElectricalEngineering">Electrical Engineering</string>
    <string name="ElectricalEngineeringCode">EE</string>
    <string name="Chemistry">Chemistry</string>
    <string name="ChemistryCode">CM</string>
    <string name="Biology">Biology</string>
    <string name="BiologyCode">CM</string>
    <string name="CivilEngineering">Civil Engineering</string>
    <string name="CivilEngineeringCode">CE</string>
    <string name="PasswordRules">Passwords must have at least length 6, one lowercase letter, one uppercase letter, and one special character.</string>
    <string name="CourseNumberRulesUndergrad">Course numbers must be 1-499.</string>
    <string name="CourseNumberRulesGrad">Course numbers must be 500-999.</string>
    <string name="CourseCreditsRules">Course credits must be 3-4.</string>
    <string name="UsernameRules">Usernames must have six lowercase letters.</string>
    <string name="SuccessfulAccountCreation">Account successfully created!</string>
    <string name="Major">Major</string>

    <!-- Instruction Strings -->
    <string name="AdviseesInstructions">Click Advisee to see their information.</string>
    <string name="StudentInformationFor">Student information for</string>
    <string name="SuccessfulAdviseeDrop">"Successfully removed student from your advisees."</string>
    <string name="SuccessfulAdviseeAdd">"Successfully added student to your advisees."</string>

    <!-- Error Messages -->
    <string name="TryAgainLater">Could not make this request. Please try again later.</string>
    <string name="DepartmentNotSelected">A department was not selected. Please select a department.</string>
    <string name="InvalidUsername">The entered username must contain 6 lowercase letters!</string>
    <string name="InvalidName">The entered first name and last name must contain letters only!</string>
    <string name="BadCreation">Could not insert your credentials into our records! Please try again.</string>
    <string name="UsernameExists">The username which you entered already exists! Please try again.</string>
    <string name="RequiredFieldEmpty">At least one of the fields are empty!</string>
    <string name="PasswordMismatch">The passwords which you entered do not match!</string>
    <string name="MajorNotSelected">A major was not selected. Please select a major.</string>
    <string name="FirstMajorNotSelected">A first major was not selected. Please select a major.</string>
    <string name="SecondMajorNotSelected">A second major was not selected. Please select a major.</string>
    <string name="FirstMinorNotSelected">A first minor was not selected. Please select a minor.</string>
    <string name="SecondMinorNotSelected">A second minor was not selected. Please select a minor.</string>
    <string name="SameMajorError">A student may not have the same first and second major. Please revise your selections.</string>
    <string name="SameMinorError">A student may not have the same first and second minor. Please revise your selections.</string>
    <string name="SameMajorMinorError">A student may not have the same major and minor. Please revise your selections.</string>
    <string name="Minor1NotSelected">You may not choose a second minor without choosing a first minor. Please revise your selections.</string>
    <string name="MissingInput">You are missing a required input. Please revise your selections.</string>
    <string name="MissingCheckBox">You are missing a required check box. Please revise your selections.</string>
    <string name="InvalidCourseNumber">The entered course number is invalid! Please revise your selections.</string>
    <string name="InvalidNumberCredits">The entered number of course credits is invalid! Please revise your selections.</string>
    <string name="SuccessfulCourseAddition">Successfully added the course to our records!</string>
    <string name="CourseExists">This course already exists in our records!</string>
    <string name="CourseDNE">We were not able to remove this course because it does not exist! Please try another course.</string>


</resources>
