<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:columnCount="2"
        android:orientation="horizontal"
        android:rowCount="1">

        <TextView
            android:layout_height="match_parent"
            android:layout_row="0"
            android:layout_column="0"
            android:paddingRight="10dp"
            android:text="@string/Department"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/courseDepartment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/radioDepartment_CS"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ComputerScience" />

            <RadioButton
                android:id="@+id/radioDepartment_MA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Mathematics" />

            <RadioButton
                android:id="@+id/radioDepartment_PH"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Physics" />

            <RadioButton
                android:id="@+id/radioDepartment_STAT"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Statistics" />

            <RadioButton
                android:id="@+id/radioDepartment_EE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ElectricalEngineering" />

            <RadioButton
                android:id="@+id/radioDepartment_CE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/CivilEngineering" />

        </RadioGroup>

    </GridLayout>

</android.support.constraint.ConstraintLayout>