<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.DepartmentSelectionActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/courseTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingRight="10dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/departmentSelectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingRight="10dp"
            android:text=""
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold|italic" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="@string/Department"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/courseDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioDepartment_CS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ComputerScience" />

                <RadioButton
                    android:id="@+id/radioDepartment_MA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mathematics" />

                <RadioButton
                    android:id="@+id/radioDepartment_PH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Physics" />
            </RadioGroup>

        </GridLayout>

        <Button
            android:id="@+id/CreateCourseButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="bottom"
            android:onClick="changeCurriculum"
            android:text="@string/CreateCourse"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>