<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="@string/Course_Name"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/courseNameEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:hint="Intro to Math"
                android:inputType="textPersonName"
                android:padding="5dp"
                android:textSize="20sp" />
        </GridLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:layout_gravity="center"
            android:layout_marginTop="8dp"
            android:text="@string/CourseCreditsRules"
            android:textAlignment="center"
            android:textSize="14sp"
            android:textStyle="bold" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="Number of credits:"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/numCreditsEditText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:background="@color/white"
                android:hint="3 or 4"
                android:inputType="number|textFilter"
                android:maxLength="1"
                android:padding="5dp"
                android:textSize="20sp" />
        </GridLayout>

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="@string/Department"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/courseDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radioDepartment_CS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ComputerScience" />

                <RadioButton
                    android:id="@+id/radioDepartment_MA"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mathematics" />

                <RadioButton
                    android:id="@+id/radioDepartment_PH"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Physics" />
            </RadioGroup>

        </GridLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>