<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Admin.CreateAdvisorAccountActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="4dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="Create an Advisor Account"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="23sp"
            android:textStyle="bold" />

        <include
            layout="@layout/starter_create_account"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="12dp"
            android:columnCount="2"
            android:orientation="horizontal"
            android:rowCount="1">

            <TextView
                android:layout_height="match_parent"
                android:layout_row="0"
                android:layout_column="0"
                android:paddingRight="10dp"
                android:text="@string/Department"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/accountDepartment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_CS"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ComputerScience" />

                <RadioButton
                    android:id="@+id/radio_math"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Mathematics" />
            </RadioGroup>

        </GridLayout>

        <Button
            android:id="@+id/CreateAccountButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="createNewAdvisorAccount"
            android:gravity="bottom"
            android:text="@string/CreateAccount"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>